# Game-Kid-Down

./: CMakeLists.txt  README.md
include/: controller.h
src/: bar.h  controller.cpp  controller.h  game.cpp  game.h  kid.cpp  kid.h  main.cpp  renderer.cpp  renderer.h
